Bug 724522 Don't prompt twice when we can't save a draft message. r=irving,ui-r=bwinton